# ragwebui

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  sample.env  start.sh
.github/workflows/: docker-image.yml
src/ragwebui/: RAGRequestor.py  RAGResult.py  __init__.py  __main__.py  config.py  frontend.py
tests/: coverage.conf  test_api.py
