[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ragwebui"
dynamic = ["version"]
requires-python = ">=3.11"
readme = "README.md"
description = ""
dependencies = [
    "gradio>=5.33.0",
    "markdown>=3.8",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "optimum[openvino]>=1.25.3",
    "pydantic-settings>=2.9.1",
    "python-json-logger>=3.3.0",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/ragwebui/-/issues"
Homepage = "https://github.com/ydethe/ragwebui"
Source = "https://github.com/ydethe/ragwebui"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py310']

[tool.uv]
resolution = "highest"

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "black==22.3.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
doc = [
    "pdoc3>=0.11.3",
    "pylint>=3.3.2",
]
test = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]
